deployment/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hope
  labels:
    app.kubernetes.io/part-of: project-hope
